improve(textprocessing): finish Kuromoji error handling